# ai-collab-docs

./: .gitignore  DESIGN.md  LICENSE  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.server.json  vite.config.ts  vitest.config.ts
.impeccable/: design.json
docs/: AI Markdown Reviewer Codex 连接协作技术方案.md  AI Markdown Reviewer Mermaid 与阅读增强方案.md  AI Markdown Reviewer Tauri 产品外壳技术方案.md  AI Markdown Reviewer 产品外壳与 Codex 连接 PRD.md  AI Markdown Reviewer 前端组件清单与设计规范.md  AI Markdown Reviewer 桌面安装包说明.md  AI Markdown Reviewer 第一阶段 PRD.md  AI Markdown Reviewer 第一阶段技术方案.md  AI Markdown Reviewer 第三阶段文档轻编辑 PRD.md  AI Markdown Reviewer 第三阶段文档轻编辑技术方案.md  AI Markdown Reviewer 第二阶段批注功能 PRD.md  AI Markdown Reviewer 第二阶段批注功能技术方案.md  Margent Agent Provider 接入标准.md  Margent Codex 初始化指南.md  Margent Codex 连接协作技术方案.md  Margent Mermaid 与阅读增强方案.md  Margent Tauri 产品外壳技术方案.md  Margent 产品外壳与 Codex 连接 PRD.md  Margent 前端组件清单与设计规范.md  Margent 基础体验增强 PRD.md  Margent 基础体验增强技术方案.md  Margent 多语言配色与空态启动页 Feature List.md  Margent 就地批注 Popover 定位优化方案.md  Margent 新用户初始化与示例文档方案.md  Margent 桌面安装包说明.md  Margent 空态启动页与多文档布局设计方案.md  Margent 第一阶段 PRD.md  Margent 第一阶段技术方案.md  Margent 第三阶段文档轻编辑 PRD.md  Margent 第三阶段文档轻编辑技术方案.md  Margent 第二阶段批注功能 PRD.md  (+4 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.updater.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/en.lproj/: InfoPlist.strings
src-tauri/resources/zh-Hans.lproj/: InfoPlist.strings
src-tauri/src/: lib.rs  main.rs
(+96 files in other folders)
