[package]
name = "margent"
version = "0.1.4"
description = "Margent desktop shell"
authors = ["Margent"]
edition = "2021"

[lib]
name = "margent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-deep-link = "2.4.9"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-single-instance = "2.4.2"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
